@@ -69,8 +69,8 @@ public class TestPathObjectTools extends TestPathObjectMethods {
 			}
 		}
 		
-		var duplicateObjectsNewIds = pathObjects.stream().map(p -> PathObjectTools.transformObject(p, null, true, true)).collect(Collectors.toList());
-		var duplicateObjectsSameIds = pathObjects.stream().map(p -> PathObjectTools.transformObject(p, null, true, false)).collect(Collectors.toList());
+		var duplicateObjectsNewIds = pathObjects.stream().map(p -> PathObjectTools.transformObject(p, null, true, true)).toList();
+		var duplicateObjectsSameIds = pathObjects.stream().map(p -> PathObjectTools.transformObject(p, null, true, false)).toList();
 		
 		for (int i = 0; i < pathObjects.size(); i++) {
 			
@@ -89,11 +89,11 @@ public class TestPathObjectTools extends TestPathObjectMethods {
 		assertEquals(pathObjects.size(), mapNewIds.size());
 		assertEquals(0L, mapNewIds.values().stream().filter(p -> p != null).count());
 
-		var mapNewIds2 = PathObjectTools.findByUUID(pathObjects.stream().map(p -> p.getID()).collect(Collectors.toList()), duplicateObjectsNewIds);
+		var mapNewIds2 = PathObjectTools.findByUUID(pathObjects.stream().map(p -> p.getID()).toList(), duplicateObjectsNewIds);
 		assertEquals(pathObjects.size(), mapNewIds2.size());
 		assertEquals(0L, mapNewIds2.values().stream().filter(p -> p != null).count());
 
-		var mapNewIds3 = PathObjectTools.findByStringID(pathObjects.stream().map(p -> p.getID().toString()).collect(Collectors.toList()), duplicateObjectsNewIds);
+		var mapNewIds3 = PathObjectTools.findByStringID(pathObjects.stream().map(p -> p.getID().toString()).toList(), duplicateObjectsNewIds);
 		assertEquals(pathObjects.size(), mapNewIds3.size());
 		assertEquals(0L, mapNewIds3.values().stream().filter(p -> p != null).count());
 
@@ -101,11 +101,11 @@ public class TestPathObjectTools extends TestPathObjectMethods {
 		assertEquals(pathObjects.size(), mapSameIds.size());
 		assertEquals(pathObjects.size(), mapSameIds.values().stream().filter(p -> p != null).count());
 		
-		var mapSameIds2 = PathObjectTools.findByUUID(pathObjects.stream().map(p -> p.getID()).collect(Collectors.toList()), duplicateObjectsSameIds);
+		var mapSameIds2 = PathObjectTools.findByUUID(pathObjects.stream().map(p -> p.getID()).toList(), duplicateObjectsSameIds);
 		assertEquals(pathObjects.size(), mapSameIds2.size());
 		assertEquals(pathObjects.size(), mapSameIds2.values().stream().filter(p -> p != null).count());
 
-		var mapSameIds3 = PathObjectTools.findByStringID(pathObjects.stream().map(p -> p.getID().toString()).collect(Collectors.toList()), duplicateObjectsSameIds);
+		var mapSameIds3 = PathObjectTools.findByStringID(pathObjects.stream().map(p -> p.getID().toString()).toList(), duplicateObjectsSameIds);
 		assertEquals(pathObjects.size(), mapSameIds3.size());
 		assertEquals(pathObjects.size(), mapSameIds3.values().stream().filter(p -> p != null).count());
 	}
