@@ -30,8 +30,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import javax.script.ScriptException;
 
 import org.slf4j.Logger;
@@ -122,12 +120,12 @@ class ScriptMenuLoader {
 				.build();
 		
 		
-		if (scriptDirectory instanceof StringProperty) {
+		if (scriptDirectory instanceof StringProperty scriptDirectoryProperty) {
 			var actionSetPath = ActionTools.actionBuilder("Set script directory...", e -> {
-				File dirBase = scriptDirectory.get() == null ? null : new File(scriptDirectory.get());
+				File dirBase = scriptDirectoryProperty.get() == null ? null : new File(scriptDirectoryProperty.get());
 				File dir = Dialogs.promptForDirectory("Set script directory", dirBase);
 				if (dir != null)
-					((StringProperty)scriptDirectory).set(dir.getAbsolutePath());
+					scriptDirectoryProperty.set(dir.getAbsolutePath());
 			})
 					.longText("Set the directory containing scripts that should be shown in this menu.")
 					.build();
@@ -176,7 +174,7 @@ class ScriptMenuLoader {
 		
 		try (var stream = Files.list(dir)) {
 			List<MenuItem> items = new ArrayList<>();
-			for (var path : stream.sorted().collect(Collectors.toList())) {
+			for (var path : stream.sorted().toList()) {
 				
 				if (Files.isHidden(path))
 					continue;
