@@ -533,6 +533,19 @@ public class Commands {
 		return new Action(e -> command.show());
 	}
 	
+	/**
+	 * Create a named command that generates a persistent single dialog on demand.
+	 * A reference to the dialog can be retained, so that if the command is called again 
+	 * either the original dialog is shown and/or brought to the front.
+	 * @param supplier supplier function to generate the dialog on demand
+	 * @param name 
+	 * @return the action
+	 */
+	public static Action createSingleStageAction(Supplier<Stage> supplier, String name) {
+		var command = new SingleStageCommand(supplier);
+		return new Action(name, e -> command.show());
+	}
+	
 	static class SingleStageCommand {
 		
 		private Stage stage;
@@ -1671,7 +1684,7 @@ public class Commands {
 		PathObjectHierarchy hierarchy = imageData.getHierarchy();
 		List<PathObject> pathObjects = hierarchy.getSelectionModel().getSelectedObjects().stream()
 				.filter(p -> p.isAnnotation() && p.hasROI() && p.isEditable() && !p.getROI().isPoint())
-				.collect(Collectors.toList());
+				.toList();
 		if (pathObjects.isEmpty()) {
 			Dialogs.showErrorMessage("Simplify annotations", "No unlocked shape annotations selected!");
 			return;
@@ -2033,7 +2046,7 @@ public class Commands {
 				// Make sure all the objects are on the current plane if needed
 				if (addToCurrentPlane) {
 					var plane = viewer.getImagePlane();
-					pathObjects = pathObjects.stream().map(p -> PathObjectTools.updatePlane(p, plane, false, true)).collect(Collectors.toList());
+					pathObjects = pathObjects.stream().map(p -> PathObjectTools.updatePlane(p, plane, false, true)).toList();
 				}
 				if (!pathObjects.isEmpty()) {
 					InteractiveObjectImporter.promptToImportObjects(imageData.getHierarchy(), pathObjects);
