@@ -33,8 +33,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.controlsfx.control.action.Action;
 import org.controlsfx.control.action.ActionUtils;
 import org.slf4j.Logger;
@@ -75,6 +73,7 @@ import javafx.util.Duration;
 import jfxtras.scene.menu.CirclePopupMenu;
 import qupath.lib.gui.ActionTools;
 import qupath.lib.gui.QuPathGUI;
+import qupath.lib.gui.ToolManager;
 import qupath.lib.gui.commands.Commands;
 import qupath.lib.gui.commands.TMACommands;
 import qupath.lib.gui.dialogs.Dialogs;
@@ -197,7 +196,7 @@ public class ViewerManager implements QuPathViewerListener {
 	 */
 	public void matchResolutions() {
 		var viewer = getActiveViewer();
-		var activeViewers = getAllViewers().stream().filter(v -> v.hasServer()).collect(Collectors.toList());
+		var activeViewers = getAllViewers().stream().filter(v -> v.hasServer()).toList();
 		if (activeViewers.size() <= 1 || !viewer.hasServer())
 			return;
 		var cal = viewer.getServer().getPixelCalibration();
@@ -931,6 +930,7 @@ public class ViewerManager implements QuPathViewerListener {
 		final ContextMenu popup = new ContextMenu();
 		
 		var defaultActions = qupath.getDefaultActions();
+		var viewerManagerActions = qupath.getViewerActions();
 		
 		MenuItem miAddRow = new MenuItem("Add row");
 		miAddRow.setOnAction(e -> addRow(viewer));
@@ -943,15 +943,12 @@ public class ViewerManager implements QuPathViewerListener {
 		miRemoveColumn.setOnAction(e -> removeColumn(viewer));
 
 		MenuItem miCloseViewer = new MenuItem("Close viewer");
-		miCloseViewer.setOnAction(e -> {
-			qupath.closeViewer(viewer);
-		});
+		miCloseViewer.setOnAction(e -> qupath.closeViewer(viewer));
 		MenuItem miResizeGrid = new MenuItem("Reset grid size");
-		miResizeGrid.setOnAction(e -> {
-				resetGridSize();
-		});
-		MenuItem miToggleSync = ActionTools.createCheckMenuItem(defaultActions.TOGGLE_SYNCHRONIZE_VIEWERS, null);
-		MenuItem miMatchResolutions = ActionTools.createMenuItem(defaultActions.MATCH_VIEWER_RESOLUTIONS);
+		miResizeGrid.setOnAction(e -> resetGridSize());
+		
+		MenuItem miToggleSync = ActionTools.createCheckMenuItem(viewerManagerActions.TOGGLE_SYNCHRONIZE_VIEWERS, null);
+		MenuItem miMatchResolutions = ActionTools.createMenuItem(viewerManagerActions.MATCH_VIEWER_RESOLUTIONS);
 		Menu menuMultiview = MenuTools.createMenu(
 				"Multi-view",
 				miToggleSync,
@@ -979,21 +976,9 @@ public class ViewerManager implements QuPathViewerListener {
 				ActionTools.createAction(() -> Commands.setViewerDownsample(viewer, 100), "1%")
 				);
 		
-		ToggleGroup groupTools = new ToggleGroup();
-		Menu menuTools = MenuTools.createMenu(
-				"Set tool",
-				ActionTools.createCheckMenuItem(defaultActions.MOVE_TOOL, groupTools),
-				ActionTools.createCheckMenuItem(defaultActions.RECTANGLE_TOOL, groupTools),
-				ActionTools.createCheckMenuItem(defaultActions.ELLIPSE_TOOL, groupTools),
-				ActionTools.createCheckMenuItem(defaultActions.LINE_TOOL, groupTools),
-				ActionTools.createCheckMenuItem(defaultActions.POLYGON_TOOL, groupTools),
-				ActionTools.createCheckMenuItem(defaultActions.POLYLINE_TOOL, groupTools),
-				ActionTools.createCheckMenuItem(defaultActions.BRUSH_TOOL, groupTools),
-				ActionTools.createCheckMenuItem(defaultActions.POINTS_TOOL, groupTools),
-				null,
-				ActionTools.createCheckMenuItem(defaultActions.SELECTION_MODE)
-//				ActionTools.getActionCheckBoxMenuItem(actionManager.WAND_TOOL, groupTools)
-				);
+		// Hack to update the tools when we show this for the first time
+		// This should catch tools added via extensions (even if it doesn't respond to tool list being changed later)
+		Menu menuTools = MenuTools.createMenu("Set tool");
 
 		
 		// Handle awkward 'TMA core missing' option
@@ -1028,12 +1013,13 @@ public class ViewerManager implements QuPathViewerListener {
 		// Create an empty placeholder menu
 		Menu menuSetClass = MenuTools.createMenu("Set class");
 		
+		var overlayActions = qupath.getOverlayActions();
 		Menu menuCells = MenuTools.createMenu(
 				"Cells",
-				ActionTools.createCheckMenuItem(defaultActions.SHOW_CELL_BOUNDARIES_AND_NUCLEI, null),
-				ActionTools.createCheckMenuItem(defaultActions.SHOW_CELL_NUCLEI, null),
-				ActionTools.createCheckMenuItem(defaultActions.SHOW_CELL_BOUNDARIES, null),
-				ActionTools.createCheckMenuItem(defaultActions.SHOW_CELL_CENTROIDS, null)
+				ActionTools.createCheckMenuItem(overlayActions.SHOW_CELL_BOUNDARIES_AND_NUCLEI),
+				ActionTools.createCheckMenuItem(overlayActions.SHOW_CELL_NUCLEI),
+				ActionTools.createCheckMenuItem(overlayActions.SHOW_CELL_BOUNDARIES),
+				ActionTools.createCheckMenuItem(overlayActions.SHOW_CELL_CENTROIDS)
 				);
 
 		
@@ -1087,6 +1073,10 @@ public class ViewerManager implements QuPathViewerListener {
 				}
 			}
 			
+			if (menuTools.getItems().isEmpty()) {
+				menuTools.getItems().addAll(createToolMenu(qupath.getToolManager()));
+			}
+			
 			boolean hasAnnotations = pathObject instanceof PathAnnotationObject || (!selectedObjects.isEmpty() && selectedObjects.stream().allMatch(p -> p.isAnnotation()));
 			
 			updateSetAnnotationPathClassMenu(menuSetClass, viewer);
@@ -1128,6 +1118,23 @@ public class ViewerManager implements QuPathViewerListener {
 			}
 		});
 	}
+	
+	
+	
+	static List<MenuItem> createToolMenu(ToolManager toolManager) {
+//		ToggleGroup groupTools = new ToggleGroup();
+		List<MenuItem> items = new ArrayList<>();
+		for (var tool : toolManager.getTools()) {
+			var action = toolManager.getToolAction(tool);
+			var mi = ActionTools.createCheckMenuItem(action);
+			items.add(mi);
+		}
+		if (!items.isEmpty())
+			items.add(new SeparatorMenuItem());
+		items.add(ActionTools.createCheckMenuItem(toolManager.getSelectionModeAction()));
+		return items;
+	}
+	
 	
 	
 	
